Notifications were broken. I changed the names of the phones in the mobile app.

--- a/entities/alerts/testalert.yaml
+++ b/entities/alerts/testalert.yaml
@@ -4,10 +4,10 @@ testalert:
   done_message : Message is done
   entity_id    : input_boolean.test_input1
   state        : 'on'
-  repeat       : 3
+  repeat       : 1
   skip_first   : false
   notifiers:
-    - all
+    - stefan
 
 testalert1:
   title        : Test Alert
