--- a/integrations/notifiers.yaml
+++ b/integrations/notifiers.yaml
@@ -1,27 +1,1 @@
-notify:
-  - platform      : html5
-    name          : chrome_notifier
-    vapid_pub_key : !secret html5_notifier_pub_key
-    vapid_prv_key : !secret html5_notifier_prv_key
-    vapid_email   : !secret html5_notifier_email
-
-  - platform      : group
-    name          : All_html5
-    services:
-      - service   : chrome_notifier
-
-  - platform      : group
-    name          : All
-    services:
-      - service   : mobile_app_mi_9t_pro
-      - service   : mobile_app_sm_a750fn
-
-  - platform      : group
-    name          : Stefan
-    services:
-      - service   : mobile_app_mi_9t_pro
-
-  - platform      : group
-    name          : Marcella
-    services:
-      - service   : mobile_app_sm_a750fn
+notify: !include_dir_merge_list ../entities/notifiers
