--- a/automations/first_floor/landing/wallswitch_light_ceiling.yaml
+++ b/automations/first_floor/landing/wallswitch_light_ceiling.yaml
@@ -1,15 +1,75 @@
-- alias         : first_floor_landing_wallswitch_light_ceiling
-  id            : 21a10a9c-c9ab-412a-a300-5ee717bae26c
+- alias            : first_floor_landing_wallswitch_light_ceiling_day
+  id               : 21a10a9c-c9ab-412a-a300-5ee717bae26c
   trigger:
-    - platform  : state
-      entity_id : binary_sensor.first_floor_landing_switch
-      to        : 'on'
-    - platform  : state
-      entity_id : binary_sensor.first_floor_landing_switch
-      to        : 'off'
+    - platform     : state
+      entity_id    : binary_sensor.first_floor_landing_switch
+      to           : 'on'
+    - platform     : state
+      entity_id    : binary_sensor.first_floor_landing_switch
+      to           : 'off'
+  condition:
+    - condition    : numeric_state
+      entity_id    : sensor.first_floor_landing_motionsensor_illuminance
+      below        : 35            # Lux
+    - condition    : or
+      conditions:
+        - condition: state
+          entity_id: binary_sensor.morning
+          state    : 'on'
+        - condition: state
+          entity_id: binary_sensor.afternoon
+          state    : 'on'
   action:
-    - service   : light.toggle
-      entity_id : light.first_floor_landing_ceiling
+    - service      : light.toggle
+      data:
+        entity_id  : light.first_floor_landing_ceiling
+        brightness : 255            # Integer between 0 and 255
+        color_temp : 200            # in mireds. 153=white, 500=yellow
+        transition : 2
+
+- alias            : first_floor_landing_wallswitch_light_ceiling_evening
+  id               : ae3036b8-0ccf-43e9-ad8c-8bf5be20f251
+  trigger:
+    - platform     : state
+      entity_id    : binary_sensor.first_floor_landing_switch
+      to           : 'on'
+    - platform     : state
+      entity_id    : binary_sensor.first_floor_landing_switch
+      to           : 'off'
+  condition:
+    - condition    : state
+      entity_id    : binary_sensor.evening
+      state        : 'on'
+  action:
+    - service      : light.toggle
+      data:
+        entity_id  : light.first_floor_landing_ceiling
+        brightness : 50             # Integer between 0 and 255
+        color_temp : 395            # in mireds. 153=white, 500=yellow
+        transition : 2
+
+- alias            : first_floor_landing_wallswitch_light_ceiling_night
+  id               : 71c97848-24f6-40d2-9836-43651b4efa45
+  trigger:
+    - platform     : state
+      entity_id    : binary_sensor.first_floor_landing_switch
+      to           : 'on'
+    - platform     : state
+      entity_id    : binary_sensor.first_floor_landing_switch
+      to           : 'off'
+  condition:
+    - condition    : state
+      entity_id    : binary_sensor.night
+      state        : 'on'
+  action:
+    - service      : light.toggle
+      data:
+        entity_id  : light.first_floor_landing_ceiling
+        brightness : 5              # Integer between 0 and 255
+        xy_color:
+          - 0.675
+          - 0.322
+        transition : 2
 
 - alias         : first_floor_landing_notify
   id            : bd214d1d-f0c1-4e06-95cc-ff567d3d9076
