--- a/entities/binary_sensors/timeofday.yaml
+++ b/entities/binary_sensors/timeofday.yaml
@@ -1,29 +1,36 @@
 - platform     : tod
-  name         : Darkness
+  name         : morning
+  after        : sunrise
+  after_offset : '00:15'
+  before       : '12:00'
+
+- platform     : tod
+  name         : afternoon
+  after        : '12:00'
+  before       : sunset
+  before_offset: '-00:15'
+
+- platform     : tod
+  name         : evening
+  after        : sunset
+  after_offset : '-00:15'
+  before       : '00:30'
+
+- platform     : tod
+  name         : night
+  after        : '00:30'
+  before       : sunrise
+  before_offset: '00:15'
+
+
+- platform     : tod
+  name         : darkness
   after        : sunset
   after_offset : '-00:15'
   before       : sunrise
   before_offset: '00:15'
 
 - platform     : tod
-  name         : Morning
-  after        : sunrise
-  after_offset : '00:15'
-  before       : '12:00'
-
-- platform     : tod
-  name         : Afternoon
-  after        : '12:00'
-  before       : sunset
-  before_offset: '-00:15'
-
-- platform     : tod
-  name         : Evening
-  after        : sunset
-  after_offset : '-00:15'
-  before       : '23:00'
-
-- platform     : tod
-  name         : Kinderbedtijd
+  name         : kinderbedtijd
   after        : '20:30'
   before       : '06:30'
