--- a/automations/ground_floor/kitchen/window_closes_light_off.yaml
+++ b/automations/ground_floor/kitchen/window_closes_light_off.yaml
@@ -10,4 +10,4 @@
       state     : 'on'
   action:
     - service   : light.turn_off
-      entity_id : light.kitchen_ceiling
+      entity_id : light.kitchen_ceiling_group
