--- a/automations/ground_floor/kitchen/wallswitch_light_ceiling.yaml
+++ b/automations/ground_floor/kitchen/wallswitch_light_ceiling.yaml
@@ -8,9 +8,5 @@
       entity_id : binary_sensor.kitchen_wallswitch
       to        : 'off'
   action:
-    - service   : zha.issue_zigbee_group_command
-      data:
-        group        : 1  # kitchen ceiling group
-        cluster_id   : 6
-        manufacturer : 0
-        command      : 2  # toggle lights
+    - service   : light.toggle
+      entity_id : light.kitchen_ceiling_group
