--- a/lovelace/home.yaml
+++ b/lovelace/home.yaml
@@ -53,7 +53,7 @@ cards:
       - type       : custom:fold-entity-row
         head:
           type     : custom:slider-entity-row
-          entity   : light.dining_area_ceiling
+          entity   : light.dining_area_ceiling_group
           toggle   : true
         entities:
           - type   : custom:slider-entity-row
@@ -64,7 +64,7 @@ cards:
       - type       : custom:fold-entity-row
         head:
           type     : custom:slider-entity-row
-          entity   : light.kitchen_ceiling
+          entity   : light.kitchen_ceiling_group
           toggle   : true
         entities:
           - type   : custom:slider-entity-row
@@ -105,9 +105,14 @@ cards:
           - type   : custom:slider-entity-row
             entity : light.bathroom_bath_ledstrip
 
-      - type       : custom:slider-entity-row
-        entity     : light.bedroom_master_ceiling
-        toggle     : true
+      - type       : custom:fold-entity-row
+        head:
+          type     : custom:slider-entity-row
+          entity   : light.bedroom_master_ceiling
+          toggle   : true
+        entities:
+          - type   : custom:slider-entity-row
+            entity : light.bedroom_master_wardrobe_light
 
       - type       : custom:fold-entity-row
         head:
