Added Shelly dimmer module to existing door switch on wardrobe cabinet in bedroom. No more blinding light when the wife opens the doors at 6 in the morning :)

--- a/automations/first_floor/bedroom_master/dimmer/press_off.yaml
+++ b/automations/first_floor/bedroom_master/dimmer/press_off.yaml
@@ -14,3 +14,6 @@
       data:
         entity_id           : light.bedroom_master_ceiling
         transition          : 1.5
+    - service               : light.turn_off
+      data:
+        entity_id           : light.bedroom_master_wardrobe_light
