--- a/lovelace/home.yaml
+++ b/lovelace/home.yaml
@@ -172,7 +172,7 @@ cards:
       - entity: sensor.afval_papier
       - entity: sensor.afval_pmd
 
-  - type : custom:vertical-style-card
+  - type : custom:vertical-stack-in-card
     title: Living room TV
     cards:
       - type: horizontal-stack
@@ -226,7 +226,7 @@ cards:
     entities:
       - remote.roelofs_harmony_hub
 
-  - type : custom:vertical-style-card
+  - type : custom:vertical-stack-in-card
     title: "Coronavirus Tracker \U0001F9A0"
     cards:
       - type  : glance
@@ -267,27 +267,14 @@ cards:
             icon  : 'mdi:emoticon-dead-outline'
             name  : "Dood"
 
-  - type : custom:vertical-style-card
+  - type : custom:vertical-stack-in-card
     title: "Speedtest.net"
     cards:
-      - type  : gauge
+      - type  : sensor
         name  : Download
         entity: sensor.speedtest_download
-        min   : 60
-        max   : 135
-        severity:
-          green : 115
-          yellow: 100
-          red   : 0
-    
-      - type  : gauge
+        graph : line
+      - type  : sensor
         name  : Upload
         entity: sensor.speedtest_upload
-        min   : 20
-        max   : 45
-        severity:
-          green : 38
-          yellow: 30
-          red   : 0
-
-
+        graph : line
