--- a/automations/first_floor/bedroom_1/lights_turn_off_after_timeout.yaml
+++ b/automations/first_floor/bedroom_1/lights_turn_off_after_timeout.yaml
@@ -11,5 +11,5 @@
       entity_id : binary_sensor.kinderbedtijd
       state     : 'on'
   action:
-    - service   : scene.turn_off
-      entity_id : scene.bedroom1_lights
+    - service   : light.turn_off
+      entity_id : light.bedroom1_lights
