--- a/entities/device_trackers/experiaboxv10.yaml
+++ b/entities/device_trackers/experiaboxv10.yaml
@@ -1,5 +1,5 @@
 # https://github.com/kadima-tech/experia-v10-device-tracker
 - platform : experiaboxv10
-  host     : 192.168.2.254
+  host     : !secret gateway_ip
   username : !secret experiabox_username
   password : !secret experiabox_password
