--- a/integrations/remote.yaml
+++ b/integrations/remote.yaml
@@ -1,4 +1,4 @@
 remote:
   - platform : harmony
     name     : Roelofs Harmony Hub
-    host     : 192.168.2.105
+    host     : !secret ip_address_harmonyhub
