--- a/integrations/shelly.yaml
+++ b/integrations/shelly.yaml
@@ -2,7 +2,7 @@ shelly:
   discovery  : false
   id_prefix  : ''
   discover_by_ip:
-    - '192.168.2.213'
+    - !secret ip_address_shelly7
   sensors:
     - all
   devices:      #devices to be added
