--- a/esphome/nodemcu_attic.yaml
+++ b/esphome/nodemcu_attic.yaml
@@ -33,8 +33,8 @@ esphome:
       - switch.turn_on: switch_relay6
 
 wifi:
-  ssid        : !secret wifi_attic_ssid
-  password    : !secret wifi_attic_password
+  ssid        : !secret wifi_ssid
+  password    : !secret wifi_password
   ap:
     ssid      : "${devicelocation} Fallback Hotspot"
     password  : !secret wifi_fallback_password
