--- a/esphome/shelly_6.yaml
+++ b/esphome/shelly_6.yaml
@@ -9,8 +9,8 @@ esphome:
   board       : esp01_1m
 
 wifi:
-  ssid        : !secret wifi_attic_ssid
-  password    : !secret wifi_attic_password
+  ssid        : !secret wifi_ssid
+  password    : !secret wifi_password
   ap:
     ssid      : "${devicelocation} Hotspot"
     password  : !secret wifi_fallback_password
