--- a/entities/alerts/kitchen_window.yaml
+++ b/entities/alerts/kitchen_window.yaml
@@ -1,10 +1,10 @@
-kitchenwindow:
-  title        : Keukenraam
-  name         : Keukenraam staat al {{ relative_time(states.binary_sensor.kitchen_windowswitch.last_changed) }} open!
-  done_message : Keukenraam gesloten
-  entity_id    : binary_sensor.kitchen_windowswitch
-  state        : 'on'
-  repeat       : 30
-  skip_first   : true
-  notifiers:
-    - all
+#kitchenwindow:
+#  title        : Keukenraam
+#  name         : Keukenraam staat al {{ relative_time(states.binary_sensor.kitchen_windowswitch.last_changed) }} open!
+#  done_message : Keukenraam gesloten
+#  entity_id    : binary_sensor.kitchen_windowswitch
+#  state        : 'on'
+#  repeat       : 30
+#  skip_first   : true
+#  notifiers:
+#    - all
