--- a/esphome/.powerplug_base.yaml
+++ b/esphome/.powerplug_base.yaml
@@ -7,7 +7,7 @@ wifi:
   ssid        : !secret wifi_ssid
   password    : !secret wifi_password
   ap:
-    ssid      : "${devicelocation} Fallback Hotspot"
+    ssid      : "${devicename} Fallback Hotspot"
     password  : !secret wifi_fallback_password
   manual_ip:
     static_ip : ${ip_address}
