Prevent automations to trigger when state switches from 'unavailable'

--- a/automations/first_floor/landing/wallswitch_light_ceiling_day.yaml
+++ b/automations/first_floor/landing/wallswitch_light_ceiling_day.yaml
@@ -3,9 +3,11 @@
   trigger:
     - platform     : state
       entity_id    : binary_sensor.first_floor_landing_switch
+      from         : 'off'
       to           : 'on'
     - platform     : state
       entity_id    : binary_sensor.first_floor_landing_switch
+      from         : 'on'
       to           : 'off'
   condition:
     - condition    : numeric_state
